# lesshand

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  lun.toml  x
.github/actions/install-wasm-pack/: action.yml
.github/workflows/: ci.yml  doc.yml  lint.yml  release.yml  rust-ci.yml
corpora/: .gitignore  README.md  earnest.txt  enron.py  gutenberg.py
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/design/: Cargo.toml
crates/design/src/: main.rs  metrics.rs  string.rs  top.rs
crates/lib/: Cargo.toml
crates/lib/src/: abbrev.rs  ambiguity.rs  dec.rs  effort.rs  enc.rs  lib.rs  mem.rs  reqs.rs  score.rs  suffix.rs  words.rs
crates/lib/src/effort/: print.rs  qwerty.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/x/: Cargo.toml
crates/x/src/: cli.rs  empty.rs  lint.rs  main.rs  wasm.rs  whitespace.rs  xref.rs
doc/: .gitignore  SUMMARY.md  _typos.toml  abbrevs.md  ambiguity.md  book.toml  cli.md  comparison.md  effort.md  evaluation.md  extensions.md  gallery.md  goals.md  good.md  memorability.md  namespaces.md  reqs.md  suffixes.md  tour.md  try.md
doc/dev/: automation.md  dev.md  lint.md  xref.md
doc/wasm/: demo.js
scripts/lint/: lint.py  whitespace.py
