[package]
name = "lesshand-wasm"
description = "WebAssembly bindings for lesshand-lib"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
lesshand = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
